@@ -18,5 +18,3 @@ TODO
     javascript:
      window.onload=window.onunload=window.onbeforeunload=null;window.close();
   Highlight keywords
-
-- Buffering Replacer
