@@ -13,5 +13,6 @@
 <filter name="Rewriter"/>
 <filter name="Blocker"/>
 <filter name="Header"/>
+<filter name="Replacer"/>
 <filter name="GifImage"/>
 </webcleaner>
